@@ -887,6 +887,7 @@ Speed=9600
 # 5 IEE S03601-96-080 (*)
 # 6 Futaba NA202SD08FA (allmost IEE compatible)
 # 7 Samsung 20S207DA4 and 20S207DA6
+# 8 Nixdorf BA6x / VT100
 # (* most should work, not testet yet.)
 Type=0
 
