@@ -60,6 +60,7 @@ v.0.5dev (ongoing development)
  * new make targets to compile & install server & clients separately
  * autoconf fixes: check for pkg-config macros
  + new driver irtrans (Phant0m / Aron Parsons)
+ + serialVFD driver: support Siemens/Wincor Nixdorf BA63/66 (Stefan Herdler)
 
 v.0.5.2
  * fix switching on/off the Load screen in lcdproc client using the menu
